# ArcFlux

./: .env  .gitignore  AUTHENTICATION_AND_WALLETS.md  CLEANUP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  SETUP_COMPLETE.md  START.md  api_connector.py  balance_monitor.py  circle_api.py  config.py  data_access.py  data_store.py  demo.py  demo_stock_purchase.py  demo_test.py  execution_engine.py  get_wallet_info.py  guardian_agent.py  initialize_with_challenge.py  intent_agent.py  main.py  model_loader.py  notification_service.py  payment_schedule.json  payment_scheduler.py  pyproject.toml  query_agent.py  rest_api.py  risk_assessment_db.json  schedule_utils.py  start.sh  stock_agent.py  stock_market_db.json  sync_validator.py  system_config.json  user_database.json
.claude/: settings.local.json
backend-python/: .gitignore  DATABASE_MIGRATION.md  FIX_PYDANTIC.md  README.md  ai_agent.py  balance_monitor.py  circle_integration.py  config.py  database.py  guardian_agent.py  main.py  payment_agent.py  query_agent.py  requirements.txt  scheduler.py  setup_wallets.py  stock_agent.py  test_ai_agent.py  test_circle_api.py  test_payment.py  test_transfer.py  wallet_creation.py
backend-python/voice/: __init__.py  transcription.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
script/: setup_circle_wallet.py
src/: audio_recorder.py
transcriptions/: transcription_20251108_133655.json  transcription_20251108_133655.txt
voice /: pyproject.toml  transcription.py
(+15 files in other folders)
