[project]
name = "blockchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circle-user-controlled-wallets==8.1.1",
    "fastapi>=0.121.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "web3>=6.20.4",
]
